# coldfront-plugin-api

./: .pre-commit-config.yaml  README.md  openapi.yaml  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: precommit.yaml  test-py39-functional-scim-auth.yaml  test-py39-unit.yaml
ci/: patch_coldfront_urls.sh  run_functional_test_scim_auth.sh  run_keycloak.sh  run_unit_tests.sh  setup.sh
patches/: 01_add_api_urls.patch
src/: local_settings.py
src/coldfront_plugin_api/: __main__.py  auth.py  config.py  serializers.py  urls.py  utils.py
src/coldfront_plugin_api/management/commands/: fix_allocation_users.py  migrate_field_of_science.py
src/coldfront_plugin_api/scim_v2/: adapter_group.py  adapter_user.py  auth_middleware.py  filters.py  groups.py  users.py
src/coldfront_plugin_api/tests/functional/: test_scim_auth.py  utils.py
src/coldfront_plugin_api/tests/unit/: base.py  fakes.py  test_allocations.py  test_fix_allocations.py  test_groups.py  test_migrate_field_of_science.py  test_users.py
tools/: create_allocations.py  download_allocation_data.py  register_users_from_csv.py
