[metadata]
name = coldfront_plugin_api
version = 0.1.0
author = Kristi Nikolla
author_email = knikolla@bu.edu
description = API plugin for ColdFront
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cci-moc/coldfront-plugin-openstack
project_urls =
    Bug Tracker = https://github.com/cci-moc/coldfront-plugin-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    coldfront==1.1.6
    djangorestframework
    mozilla-django-oidc
    django-scim2 >=0.19.0, <0.20.0

[options.packages.find]
where = src
